# Chatbot-Truth-base--Creation

./: .coverage  .dockerignore  .env  .env.example  .gitignore  .panelin_assistant_id  AI_Agent_Prompt_BMC_Configuration.md  AI_Agent_Prompt_Security_Expert.md  ANALISIS_CONFIGURACION_ACTUAL_GPT.md  ANALISIS_CONVERSACION_RAMIRO_BMC.md  ANALISIS_ERRORES_BASE_CONOCIMIENTOS_PANELIN.md  ANALISIS_GPT_COTIZACION_V3.md  ANALISIS_UN_ARCHIVO_VS_MULTIPLES.md  Action_Shopify_Ejemplo_Simple.yaml  Arquitectura_Ideal_GPT_Panelin.md  Arquitectura_Optima_Agentes_Cotizacion_2025.md  Arquitectura_Optima_GPT_Cotizacion_2025.md  BMC_Base_Conocimiento_CONSOLIDADA_v5.0.json  BMC_Base_Conocimiento_GPT-2.json  BMC_Base_Conocimiento_Unified_v6.json  BMC_Base_Conocimiento_v5.0.json  BMC_IDENTIDAD_EMPRESARIAL.json  BMC_MATRIZ_COSTOS_VENTAS_README.md  BMC_PROPUESTA_VALOR.json  BOT_IMPROVEMENT_STRATEGY.md  BROMYROS_KB_README.md  CLOUD_DEPLOYMENT_GUIDE.md  CLOUD_DEPLOYMENT_SUMMARY.md  CODEX_GEM_INTEGRATION.md  CODIGO_BASE_ANALISIS_COMPLETO_REPORTE.md  CONFIGURACION_MONGODB.md  CONFIGURACION_OPTIMIZADA_GPT.md  CONOCIMIENTO_UNIFICADO_GPT.json  CONVERSATION_LOGGING_QUICKSTART.md  CORRECCIONES_KB_2026-01-24.md  CORRECTIONS_APPLIED_2026-01-28.md  COST_MATRIX_GPT_ANALYZE_README.md  COnfig   Checklist_Verificacion_GPT_Configurado.md  DEPLOYMENT_GUIDE.md  (+238 more)
ai-project-files-organizer-agent/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUIA_USO.md  LICENSE  README.md  ejecutar_ejemplos_guia.py  ejemplo_rapido.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_agent.py  setup.py  test_git_integration.py
ai-project-files-organizer-agent/.github/: PULL_REQUEST_TEMPLATE.md
ai-project-files-organizer-agent/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
ai-project-files-organizer-agent/.github/workflows/: ci.yml  codeql.yml  release.yml
ai-project-files-organizer-agent/ai_files_organizer/: __init__.py  agent.py  cli.py
ai-project-files-organizer-agent/ai_files_organizer/config/: __init__.py  default_config.json  folder_rules.json
ai-project-files-organizer-agent/ai_files_organizer/core/: __init__.py  approval_manager.py  file_scanner.py  file_watcher.py  folder_structure_engine.py  git_manager.py  (+3 more)
ai-project-files-organizer-agent/docs/: API_REFERENCE.md  USER_GUIDE.md
ai-project-files-organizer-agent/tests/: __init__.py  test_agent.py  test_config_validator.py  test_file_scanner.py  test_folder_structure_engine.py  test_metrics.py  test_outdated_detector.py  test_validators.py  test_version_manager.py
(+643 files in other folders)
