[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-files-organizer"
version = "0.1.0"
description = "AI agent for automatically organizing project files into best-practice folder structures"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AI Project Files Organizer", email = "organizer@example.com"}
]
keywords = ["file-organization", "project-management", "automation", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "watchdog>=3.0.0",
    "click>=8.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
files-organizer = "ai_files_organizer.cli:cli"

[project.urls]
Homepage = "https://github.com/your-username/ai-project-files-organizer-agent"
Documentation = "https://github.com/your-username/ai-project-files-organizer-agent#readme"
Repository = "https://github.com/your-username/ai-project-files-organizer-agent"
Issues = "https://github.com/your-username/ai-project-files-organizer-agent/issues"

[tool.setuptools]
packages = ["ai_files_organizer", "ai_files_organizer.core", "ai_files_organizer.config", "ai_files_organizer.utils"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=ai_files_organizer --cov-report=term-missing --cov-report=html"
